--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,7 @@ crashlytics-build.properties
 ParkourPandemic/Library/
 
 ParkourPandemic/Temp/
+
+New Unity Project/Library/
+
+New Unity Project/
